# mlx-speculative-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  final_report.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml
examples/: client_example.py  concurrent_test.py  hf_example.py  quick_concurrent_test.sh  stress_test.py
mlx_speculative/: __init__.py  cli.py  cli_enhanced.py  core.py  hf_endpoints.py  hf_utils.py  models.py  multi_model.py  sample_utils.py  server.py  server_v2.py  utils.py
tests/: __init__.py  test_generate.py  test_models.py  test_prompt_cache.py
tests/fixtures/: test_utils.py
tests/integration/: test_server.py
tests/performance/: test_benchmarks.py
tests/unit/: test_core.py  test_multi_model.py
